force-app/main/default/objects/LogSincronismo__c/LogSincronismo__c.object-meta.xml
<CustomObject>
    <description>Armazena os logs detalhados de execução das rotinas de sincronização da integração com o Conta Azul.</description>
    <label>Log de Sincronismo</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Número do Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs de Sincronismo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>