force-app/main/default/objects/LogSincronismo__c/fields/Data_Fim__c.field-meta.xml
<CustomField>
    <fullName>Data_Fim__c</fullName>
    <description>Data e hora em que a execução do script foi concluída (seja com sucesso ou erro).</description>
    <label>Data de Fim</label>
    <type>DateTime</type>
</CustomField>