force-app/main/default/objects/LogSincronismo__c/fields/Data_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Data_Inicio__c</fullName>
    <description>Data e hora de início da execução do script.</description>
    <label>Data de Início</label>
    <type>DateTime</type>
</CustomField>