force-app/main/default/objects/LogSincronismo__c/fields/Detalhes__c.field-meta.xml
<CustomField>
    <fullName>Detalhes__c</fullName>
    <description>Logs detalhados de execução (saída do console acumulada).</description>
    <label>Detalhes da Execução</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>