force-app/main/default/objects/LogSincronismo__c/fields/Mensagem_Erro__c.field-meta.xml
<CustomField>
    <fullName>Mensagem_Erro__c</fullName>
    <description>Mensagem de erro detalhada em caso de falha.</description>
    <label>Mensagem de Erro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>