force-app/main/default/objects/LogSincronismo__c/fields/Script__c.field-meta.xml
<CustomField>
    <fullName>Script__c</fullName>
    <description>Nome do script executado (ex: sync-ca-sales ou distribute-revenue).</description>
    <label>Script</label>
    <length>255</length>
    <type>Text</type>
</CustomField>