force-app/main/default/objects/LogSincronismo__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status da execução (Executando, Sucesso ou Erro).</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>